# bisect-binary

./: .travis.yml  ChangeLog.md  README.md  bisect-binary.cabal  bisect-binary.hs
src/: Braille.hs  Intervals.hs  Main.hs
