name:                bisect-binary
version:             0.1
synopsis:            Determine relevant parts of binary data
-- description:         
homepage:            http://github.com/nomeata/bisect-binary
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
category:            Development
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable bisect-binary
  main-is:             Main.hs
  other-modules:       Intervals, Braille
  other-extensions:    LambdaCase, DeriveGeneric
  build-depends:       base >=4.9 && <4.10
  build-depends:       bytestring >=0.10 && <0.11
  build-depends:       directory >=1.3 && <1.4
  build-depends:       filepath >=1.4 && <1.5
  build-depends:       optparse-applicative >=0.13 && <0.14
  build-depends:       yaml >=0.8 && <0.9
  build-depends:       haskeline >=0.7 && <0.8
  build-depends:       time >=1.6 && <1.7
  build-depends:       hashable >=1.2 && <1.3
  build-depends:       integer-logarithms >=1.0 && <1.1
  build-depends:       terminal-size >=0.3 && <0.4
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-name-shadowing
